Prevent bottom of screen from getting cut off in mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -293,7 +293,7 @@ and (max-device-width : 480px) {
   .donation-form {
     width: 100%;
     min-width: 320px;
-    height: 100%;
+    min-height: 550px;
     .donation-loading-overlay {
       width: 100%;
       height: 100%;
